[FIX] base: overflow-x
In css, overflow-x and overflow-y must have the same value. If overflow-x is equal to
auto then overflow-y is equal to auto.

opw:632607

--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -2766,8 +2766,6 @@ body.oe_single_form
         padding: 1px
         height: 18px
         font-size: 20px
-    .modal-body
-        overflow-x: auto
     .modal-footer
         text-align: left
     .oe_button
